--- a/index.html
+++ b/index.html
@@ -12,25 +12,37 @@
 
   <body class="bg-gray-100">
     <header class="bg-white shadow-md flex items-center justify-between p-4">
-      <img src="assets/note-app-logo.png" alt="Logo" class="h-8" />
-      <input
-        type="text"
-        class="border border-gray-300 rounded-md mx-4 px-2 py-2 focus:outline-none focus:ring-2 focus:ring-gray-500 w-[400px]"
-        placeholder="Search Notes..."
-      />
+      <img src="assets/note-app-logo.svg" alt="LOGO" class="h-8" />
+      <div class="relative w-[400px] h-[44px] mx-4">
+        <!-- Icona sinistra -->
+        <img
+          src="assets/search-icon.svg"
+          class="absolute left-3 top-1/2 -translate-y-1/2 w-5 h-5 pointer-events-none"
+          alt="Search"
+        />
+        <input
+          type="text"
+          class="border border-gray-300 rounded-md px-10 py-2 focus:outline-none focus:ring-2 focus:ring-gray-500 w-full"
+          placeholder="Search a word in your Notes"
+          id="search-bar"
+        />
+      </div>
       <button
         id="new-note-btn"
-        class="px-4 py-2 bg-black text-white rounded font-semibold hover:bg-orange-500"
+        class="flex items-center gap-2 px-4 py-2 bg-black text-white rounded font-semibold hover:bg-orange-500"
+        title="Create a new note"
       >
+        <img src="assets/plus-sign.svg" alt="New Note" class="w-3 h-3" />
         New Note
       </button>
       <div
         id="popup-new-note"
         class="fixed inset-0 bg-black bg-opacity-40 flex items-center justify-center z-50 hidden"
       >
-        <div class="bg-white p-8 rounded shadow-lg w-200">
+        <div class="bg-white p-8 rounded-lg shadow-lg w-200">
           <h2 class="text-lg font-bold mb-4">Add a new Note</h2>
           <select
+            required
             id="new-note-category-select"
             class="border w-full p-2 rounded mb-4 appearance-none"
           >
@@ -59,7 +71,7 @@
               id="confirm-new-note-btn"
               class="w-full px-3 py-1 rounded bg-black text-white hover:bg-orange-500"
             >
-              Add
+              Create
             </button>
           </div>
         </div>
@@ -70,13 +82,16 @@
       <aside class="w-64 bg-white shadow-lg p-5 min-h-screen">
         <button
           id="add-category-btn"
-          class="mt-4 px-4 py-2 bg-black text-white rounded font-semibold w-full hover:bg-orange-500"
+          class="flex items-center justify-center gap-2 px-auto py-2 bg-black text-white rounded font-semibold w-full hover:bg-orange-500"
+          title="Add a new category"
         >
-          Add a New Category
+          <img src="assets/plus-sign.svg" alt="New Category" class="w-3 h-3" />
+          New Category
         </button>
         <button
           id="show-all-notes"
           class="mt-2 px-4 py-2 bg-gray-100 text-gray-500 rounded font-semibold w-full hover:bg-gray-200 hover:text-gray-800"
+          title="Show Notes from all categories"
         >
           Show All Notes
         </button>
@@ -87,7 +102,7 @@
         id="popup-category"
         class="fixed inset-0 bg-black bg-opacity-40 flex items-center justify-center z-50 hidden"
       >
-        <div class="bg-white p-8 rounded shadow-lg w-80">
+        <div class="bg-white p-8 rounded-lg shadow-lg w-96">
           <h2 class="text-lg font-bold mb-4">Add a new category</h2>
           <input
             id="category-name-input"
@@ -112,8 +127,49 @@
         </div>
       </div>
 
+      <div
+        id="popup-edit-category"
+        class="fixed inset-0 bg-black bg-opacity-40 flex items-center justify-center z-50 hidden"
+      >
+        <div class="bg-white p-8 rounded-lg shadow-lg w-96">
+          <h2 class="text-lg font-bold mb-4">Edit Category</h2>
+          <input
+            id="edit-category-name-input"
+            type="text"
+            placeholder="Name"
+            class="border w-full p-2 rounded mb-4"
+          />
+          <div class="flex justify-end gap-2">
+            <button
+              id="cancel-edit-category-btn"
+              class="w-full px-3 py-1 rounded bg-gray-300"
+            >
+              Cancel
+            </button>
+            <button
+              id="confirm-edit-category-btn"
+              class="w-full px-3 py-1 rounded bg-black text-white hover:bg-orange-500"
+            >
+              Save
+            </button>
+          </div>
+          <div class="flex flex-col items-center pt-4">
+            <a
+              id="delete-category-btn"
+              class="text-red-500 hover:underline text-center"
+              style="cursor: pointer"
+            >
+              Delete Category
+            </a>
+          </div>
+        </div>
+      </div>
+
       <main class="flex-1 p-5">
-        <h1 class="text-3xl font-bold">My Notes</h1>
+        <div class="flex gap-2">
+          <img src="assets/note-app-logo.svg" alt="Logo" class="h-8" />
+          <h1 class="text-3xl font-bold">My Notes</h1>
+        </div>
         <h2 id="current-date" class="text-lg py-2"></h2>
         <div
           class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mt-4"
